# mcpskills-cli

./: .gitignore  LICENSE  README.md  Untitled-1  pyproject.toml  test_token_compare.py
.cursor/skills/dellstore/: SKILL.md
.cursor/skills/dellstore/scripts/: call.py
docs/: LOW_TOKEN_SKILLS.md
src/mcp_cli/: __init__.py  cli.py  client.py  credentials.py  generator.py
src/mcp_cli/templates/: call_bash.sh.j2  call_go.go.j2  call_node.js.j2  call_python.py.j2  call_rust.rs.j2  skill.md.j2  skill_single.md.j2
