[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpskills-cli"
version = "0.1.2"
description = "Generate Cursor Agent Skills from MCP server tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.3",
    "jinja2>=3.1",
]

[project.scripts]
mcpskills-cli = "mcp_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_cli"]
